[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/scripts/Senso.gd" type="Script" id=1]
[ext_resource path="res://src/assets/Enemies/Senso.png" type="Texture" id=2]



[sub_resource type="Animation" id=1]
resource_name = "spin"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 25.4657

[sub_resource type="RayShape2D" id=3]

[sub_resource type="RayShape2D" id=4]

[node name="Senso" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.300002, 0 )
scale = Vector2( 0.0988281, 0.1 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "spin"
anims/spin = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 22.2261, 5 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 25 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -22.5105, 5 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 25 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 22.2261, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -22.5105, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Senso_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Senso_body_exited"]
[connection signal="body_entered" from="RightWall" to="." method="_on_RightWall_body_entered"]
[connection signal="body_entered" from="LeftWall" to="." method="_on_LeftWall_body_entered"]
